--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,7 @@
             <h1>{{title}}</h1>
         {{>header}}
         <img src="/img/sahibjot singh.jpeg" class="portrait"/>
-        <p>Myself Sahibjot Singh.I am a mobile application developer having knowledge 
-            about android studio and java. Also having knowledge of rect native and currently working on node js 
+        <p>Myself Sahibjot Singh.I am a Btech Undergraduate in Computer science and engineering.I have experience in Mobile app development in android studio using java,kotlin and cross platform app using react-native.
         </p>
         </div>
         {{>footer}}
